--- a/client/src/components/MonitorsList.css
+++ b/client/src/components/MonitorsList.css
@@ -9,6 +9,9 @@
   height: 100%;
   min-height: 0;
   max-height: calc(100vh - 300px);
+  width: 100%;
+  box-sizing: border-box;
+  overflow: hidden;
 }
 
 @media (max-width: 768px) {
@@ -16,6 +19,15 @@
     max-height: none;
     height: auto;
     min-height: 400px;
+    width: 100%;
+    max-width: 100%;
+    box-sizing: border-box;
+  }
+}
+
+@media (orientation: landscape) and (max-width: 768px) {
+  .monitors-list-card {
+    min-height: 300px;
   }
 }
 
